--- a/SimcoxB_InstumentDatabase/InstrumentsUI/InstrumentsUI/App.config
+++ b/SimcoxB_InstumentDatabase/InstrumentsUI/InstrumentsUI/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="InstrumentsUI.Properties.Settings.orchestraConnection"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Orchestra.accdb"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\Blaine\Documents\GitHub\BlainePortfolio\SimcoxB_InstumentDatabase\InstrumentsUI\Orchestra.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup> 
