Updated connection string to run from Github repo
Fixed DB loading problems present since changing file path.
Working on relative path to stop further file transition problems
caused by changed drive paths.

--- a/Programming Architecture Examples/Using Facade Hierarchy/FacadeWinformTest1.0/FacadeWinformTest1.0/App.config
+++ b/Programming Architecture Examples/Using Facade Hierarchy/FacadeWinformTest1.0/FacadeWinformTest1.0/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="FacadeWinformTest1._0.Properties.Settings.AdventureworksConnection"
-            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=&quot;C:\Users\Blaine\Desktop\Blaine NMC\CIT 275\Using Facade Hierarchy\FacadeWinformTest1.0\AdventureWorksLT2012_Data.mdf&quot;;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=&quot;C:\Users\Blaine\Documents\GitHub\BlainePortfolio\Programming Architecture Examples\Using Facade Hierarchy\FacadeWinformTest1.0\AdventureWorksLT2012_Data.mdf&quot;;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
