--- a/Programming Architecture Examples/Using Facade Hierarchy/FacadeWinformTest1.0/FacadeWinformTest1.0/FacadeWinformTest1.0.csproj
+++ b/Programming Architecture Examples/Using Facade Hierarchy/FacadeWinformTest1.0/FacadeWinformTest1.0/FacadeWinformTest1.0.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="app.config" />
     <None Include="DataClasses1.dbml.layout">
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </None>
@@ -93,9 +94,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
